Repair javaScript code, modified event section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 			</div>
 			<section class="new_game">
 				<button class="reset">Ja chce jeszcze raz</button>
-				<div class="img_container"><img src="Osioł_(Shrek).webp" alt="osiol shrek" class="osiol" /></div>
+				<div class="img_container">
+					<img src="Osioł_(Shrek).webp" alt="osiol shrek" class="osiol" />
+				</div>
 			</section>
 		</main>
 		<script src="/main.js"></script>
