added menu added working single mode and prepared multi

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<main>
+	<main class="main none">
 		<div id="bulb-container">
 		<i id="bulb" class="fa-regular fa-lightbulb"></i>
 		</div>
@@ -46,6 +46,14 @@
 			</div>
 		</section>
 	</main>
+<div class="menu">
+		<div class="start-menu">
+			<h1 class="start-menu-header">Chcesz grać sam czy ze znajomym
+			</h1>
+			<button class="start-menu-item solo">Samemu, na co baba jak można ręką</button>
+			<button class="start-menu-item multi">Samemu to se moge co najwyzej zjechać na recznym, oczywiscie że ze znajomym</button>
+		</div>
+</div>
 	<script src="main.js"></script>
 </body>
 
