--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div class="start-menu">
 			<h1 class="start-menu-header">Chcesz grać sam czy ze znajomym
 			</h1>
-			<button class="start-menu-item solo">Samemu, na co baba jak można ręką</button>
+			<button class="start-menu-item solo">Samemu</button>
 			<button class="start-menu-item multi">Samemu to se moge co najwyzej zjechać na recznym, oczywiscie że ze znajomym</button>
 		</div>
 </div>
